Finished implementing models except for middle join table model, tentative whether define foreign key inside init() or as a relationship table

--- a/src/views/blog.hbs
+++ b/src/views/blog.hbs
@@ -1,5 +1,7 @@
 <div class="blog">
   <div class="card">
-    <div class="card-body">{{name}}</div>
+    {{#each this}}
+    <div class="row">{{name}}  {{email}}</div>
+    {{/each}}
   </div>
 </div>
