nodemon.json now copies js folder on restart(to ensure file structure), fixed Sequelize associations for proper source/target, removed extra class keys (since sequelize creates default ones, reconverting from alias was creating duplicate ids), removed all completed TODOs, implemented sign-in/sign-up routes and handlebars, made styling changes in handlebar files

--- a/src/views/blog.hbs
+++ b/src/views/blog.hbs
@@ -1,7 +1,6 @@
-<div class="blog">
-  <div class="card">
-    {{#each this}}
-    <div class="row">{{name}}  {{email}}</div>
-    {{/each}}
-  </div>
+<div class="card" style="width: 18rem;">
+  {{#each this}}
+  <div class="card-title"><a class="Blog-Post">{{postTitle}} Posted At: {{createdAt}}</a></div>
+  //TODO: Click Post in Blog and load post.hbs
+  {{/each}}
 </div>
