--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -36,7 +36,7 @@
           <a class="nav-link" href="#">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="/sign-in">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Logout</a>
@@ -45,10 +45,7 @@
     </div>
   </nav>
   <body>
-    <div class="jumbotron">
       {{{body}}}
-      <div><button class="login">Click me</button></div>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -60,6 +57,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="../../../assets/js/script.js"></script>
+    <script src="../../js/script.js"></script>
   </body>
 </html>
