--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,6 +1,6 @@
 <div class="card" style="width: 18rem;">
   {{#each this}}
-  <div class="card-title"><a class="Blog-Post">{{postTitle}} Posted At: {{createdAt}}</a></div>
+  <div class="card-title"><a class="Blog-Post" href="/post/{{id}}">{{postTitle}} Posted At: {{createdAt}}</a></div>
   //TODO: Click Post in Blog and load post.hbs
   {{/each}}
 </div>
