Finished sign-in/sign-up, conditionalized main for logged-in state, routes finished for creating new user/logging in, checkpassword method implemented on User class, render a single post on click

--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,4 +1,36 @@
-<div class="card" style="width: 18rem;">
-  <button>Sign In</button>
-    <a href="/sign-up">Sign Up</a>
+<div class="d-flex justify-content-center" style="margin-top: 50px">
+  <div class="card">
+    <div class="card-header">
+      <h1 style="font-size: 24px">Sign In</h1>
+    </div>
+    <div class="card-body">
+      <form>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+          </div>
+          <input type="text" class="form-control" placeholder="email" />
+        </div>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text"><i class="fas fa-key"></i></span>
+          </div>
+          <input type="password" class="form-control" placeholder="password" />
+        </div>
+        <div class="text-center mt-2">
+          <input
+            type="submit"
+            value="Sign In"
+            class="btn btn-primary align-center"
+          	id="signIn"
+					/>
+        </div>
+      </form>
+    </div>
+    <div class="card-footer">
+      <div class="d-flex justify-content-center">
+        <a href="/sign-up">Create Account</a>
+      </div>
+    </div>
+  </div>
 </div>
