--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,10 +11,38 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css"/>
   </head>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  {{#if loggedIn}}
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dash">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <button id="logout" class="btn-no-style">Logout</button>
+        </li>
+      </ul>
+      </div>
+    </nav>
+    {{else}}
     <button
       class="navbar-toggler"
       type="button"
@@ -29,19 +57,17 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/sign-in">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" href="/sign-in">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/sign-in">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Logout</a>
-        </li>
       </ul>
     </div>
+    {{/if}}
   </nav>
   <body>
       {{{body}}}
