Set up sesion, password encryption, login/sign up functions with their click events

--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -9,13 +9,13 @@
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
           </div>
-          <input type="text" class="form-control" placeholder="email" />
+          <input type="email" class="form-control" placeholder="email"  id="email"/>
         </div>
         <div class="input-group">
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
           </div>
-          <input type="password" class="form-control" placeholder="password" />
+          <input type="password" class="form-control" placeholder="password" id="pw" />
         </div>
         <div class="text-center mt-2">
           <input
