--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -82,6 +82,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
