--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -9,19 +9,19 @@
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-user"></i></span>
           </div>
-          <input type="text" class="form-control" placeholder="username" />
+          <input type="text" class="form-control" placeholder="username" id="id" />
         </div>
         <div class="input-group mb-2">
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
           </div>
-          <input type="text" class="form-control" placeholder="email" />
+          <input type="email" class="form-control" placeholder="email" id="email" />
         </div>
         <div class="input-group">
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
           </div>
-          <input type="password" class="form-control" placeholder="password" />
+          <input type="password" class="form-control" placeholder="password" id="pw" />
         </div>
         <div class="text-center mt-2">
           <input
