Passed loggedIn state to handlebars, implemented loggedIn conditionals, removed email fields from User/sign-up/sign-in, implemented login validation/feedback, corrected handlebars {{each}} code

--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;">
-  {{#each this}}
+  {{#each plainPosts}}
   <div class="card-title"><a class="Blog-Post" href="/post/{{id}}">{{postTitle}} Posted At: {{createdAt}}</a></div>
   {{/each}}
 </div>
