--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/style.css"/>
   </head>
 
+    {{#if loggedIn}}
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  {{#if loggedIn}}
     <button
       class="navbar-toggler"
       type="button"
@@ -37,12 +37,13 @@
           <a class="nav-link" href="/dash">Dashboard</a>
         </li>
         <li class="nav-item">
-          <button id="logout" class="btn-no-style">Logout</button>
+          <a class="nav-link" href="/" id="logout">Logout</a>
         </li>
       </ul>
       </div>
-    </nav>
+  </nav>
     {{else}}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button
       class="navbar-toggler"
       type="button"
@@ -57,7 +58,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/sign-in">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/sign-in">Dashboard</a>
@@ -67,8 +68,8 @@
         </li>
       </ul>
     </div>
-    {{/if}}
   </nav>
+    {{/if}}
   <body>
       {{{body}}}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
