--- a/views/post.hbs
+++ b/views/post.hbs
@@ -1,5 +1,10 @@
 <div class="card" style="width: 18rem;">
+  {{#if loggedIn}}
   <div class="card-title">{{postTitle}} Posted At: {{createdAt}}</div>
   <p class="card-text">{{postText}}</p>
+  {{else}}
+  <div class="card-title">Unauthorized Access</div>
+  <p class="card-text"> You need to sign in first </p>
+  {{/if}}
 //TODO: Code commenting/updating/deleting Posts
 </div>
