--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,15 +1,15 @@
+<div class="d-flex justify-content-center" id="error"></div>
 <div class="d-flex justify-content-center" style="margin-top: 50px">
   <div class="card">
     <div class="card-header">
       <h1 style="font-size: 24px">Sign In</h1>
     </div>
     <div class="card-body">
-      <form>
         <div class="input-group mb-2">
           <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+            <span class="input-group-text"><i class="fas fa-user"></i></span>
           </div>
-          <input type="email" class="form-control" placeholder="email"  id="email"/>
+          <input type="text" class="form-control" placeholder="username" id="id" />
         </div>
         <div class="input-group">
           <div class="input-group-prepend">
