--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,3 +1,4 @@
+<div class="d-flex justify-content-center" id="error"></div>
 <div class="d-flex justify-content-center" style="margin-top: 50px">
   <div class="card">
     <div class="card-header">
@@ -10,12 +11,6 @@
             <span class="input-group-text"><i class="fas fa-user"></i></span>
           </div>
           <input type="text" class="form-control" placeholder="username" id="id" />
-        </div>
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
-          </div>
-          <input type="email" class="form-control" placeholder="email" id="email" />
         </div>
         <div class="input-group">
           <div class="input-group-prepend">
