--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center" id="error"></div>
 <div class="d-flex justify-content-center" style="margin-top: 50px">
-  <div class="card">
+  <div class="card" style="box-shadow: 5px 5px 3px grey">
     <div class="card-header">
       <h1 style="font-size: 24px">Sign In</h1>
     </div>
