--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,5 +1,11 @@
-<div class="card" style="width: 18rem;">
+<div class="card mx-auto" style="width: 90vw">
   {{#each plainPosts}}
-  <div class="card-title"><a class="Blog-Post" href="/post/{{id}}">{{postTitle}} Posted At: {{createdAt}}</a></div>
+  <div class="card-title mb-0" style="background-color: beige; font-size: 22px">
+    <a class="Blog-Post" href="/post/{{ id }}">{{ postTitle }}</a>
+    <div class="float-right">
+      Posted by {{ user.name }} on {{format_date createdAt}}
+    </div>
+  </div>
+  <div class="card-body" style="background-color: bisque">{{ postText }}</div>
   {{/each}}
 </div>
