--- a/views/post.hbs
+++ b/views/post.hbs
@@ -1,10 +1,14 @@
-<div class="card" style="width: 18rem;">
   {{#if loggedIn}}
-  <div class="card-title">{{postTitle}} Posted At: {{createdAt}}</div>
-  <p class="card-text">{{postText}}</p>
+<div class="card ml-2 mr-5 mx-auto" style="width: 90vw">
+  <div class="card-title mb-0" style="background-color: beige; font-size: 22px">
+    {{ plainPosts.postTitle }}
+    <div class="float-right">
+      Posted by {{ plainPosts.user.name }} on {{format_date plainPosts.createdAt}}
+    </div>
+  </div>
+  <div class="card-body" style="background-color: bisque">{{ plainPosts.postText }}</div>
   {{else}}
   <div class="card-title">Unauthorized Access</div>
-  <p class="card-text"> You need to sign in first </p>
+  <p class="card-text">You need to sign in first</p>
   {{/if}}
-//TODO: Code commenting/updating/deleting Posts
 </div>
