--- a/views/dash.hbs
+++ b/views/dash.hbs
@@ -1,3 +1,16 @@
+{{#if loggedIn}}
+  <div class="d-flex justify-content-center" style="font-size: 30px;">My Posts:</div>
+<div class="card mx-auto" style="width: 90vw">
+  {{#each plainPosts}}
+  <div class="card-title mb-0" style="background-color: beige; font-size: 22px">
+    <a class="Blog-Post" href="/post/{{ this.id }}">{{ this.postTitle }}</a>
+    <div class="float-right">
+      Posted by {{ this.user.name }} on {{format_date this.createdAt}}
+    </div>
+  </div>
+  <div class="card-body" style="background-color: bisque">{{ postText }}</div>
+  {{/each}}
+</div>
 <div class="container">
 <div class="mb-3">
   <label for="postTitle" class="form-label">Post Title</label>
@@ -11,3 +24,4 @@
 <button class="btn btn-primary" id="createPost">Create New Post +</button>
 </div>
 </div>
+{{/if}}
