--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,13 +1,26 @@
-  {{#if loggedIn}}
-<div class="card mb-2 mx-auto posts" id="postid" data-id="{{plainPosts.id}}">
+{{#if loggedIn}}
+<div class="card mb-2 mx-auto posts" id="postid" data-id="{{ plainPosts.id }}">
   <div class="card-title mb-0 pl-2 d-inline float-left">
-    <div class="d-inline" id="commentTitle" contenteditable="true">{{ plainPosts.postTitle }}</div>
+    <div class="d-inline" id="commentTitle" contenteditable="true">
+      {{ plainPosts.postTitle }}
+    </div>
     <div class="float-right d-inline">
-      Posted by {{ plainPosts.user.name }} on {{format_date plainPosts.createdAt}}
+      Posted by {{ plainPosts.user.name }} on
+      {{format_date plainPosts.createdAt}}
     </div>
+  </div>
+  <div class="card-body">
+    <div class="d-inline float-left" id="commentText" contenteditable="true">
+      {{ plainPosts.postText }}
     </div>
-  <div class="card-body" id="commentText" contenteditable="true">{{ plainPosts.postText }}</div>
+    <div class="float-right">
+      Updated by {{ plainPosts.user.name }} on
+      {{format_date plainPosts.updatedAt}}
+    </div>
+  </div>
 </div>
-<div class="text-center"><button class="btn btn-primary" id="edit">Update Post</button></div>
-
+<div class="text-center">
+  <button class="btn btn-primary" id="edit">Update Post</button>
+  <button class="btn btn-danger" id="delete">Delete This Post</button>
+</div>
 {{/if}}
