--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -71,6 +71,8 @@
   </nav>
     {{/if}}
   <body>
+    <div class="d-flex justify-content-center" id="error"></div>
+    <div class="d-flex justify-content-center" id="message"></div>
       {{{body}}}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
