Implemented user validation for edit page

--- a/views/postnew.hbs
+++ b/views/postnew.hbs
@@ -13,6 +13,6 @@
 </div>
 </div>
 {{else}}
-  <div class="card-title">Unauthorized Access</div>
-  <p class="card-text">You need to sign in first</p>
+  <div class="card-title text-center">Unauthorized Access</div>
+  <p class="card-text text-center">You need to sign in first</p>
 {{/if}}
