--- a/views/post.hbs
+++ b/views/post.hbs
@@ -25,7 +25,7 @@
 </div>
 </div>
   {{else}}
-  <div class="card-title">Unauthorized Access</div>
-  <p class="card-text">You need to sign in first</p>
+  <div class="card-title text-center">Unauthorized Access</div>
+  <p class="card-text text-center">You need to sign in first</p>
   {{/if}}
 
