--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -9,13 +9,23 @@
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-user"></i></span>
           </div>
-          <input type="text" class="form-control" placeholder="username" id="id" />
+          <input
+            type="text"
+            class="form-control"
+            placeholder="username"
+            id="id"
+          />
         </div>
         <div class="input-group">
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="fas fa-key"></i></span>
           </div>
-          <input type="password" class="form-control" placeholder="password" id="pw" />
+          <input
+            type="password"
+            class="form-control"
+            placeholder="password"
+            id="pw"
+          />
         </div>
         <div class="text-center mt-2">
           <input
